policy-verify-sbom.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-ghcr-sbom-attestation
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: check-sbom-attestation
      match:
        any:
        - resources:
            kinds:
              - Pod
      exclude:
        any:
        - resources:
            namespaces:
              - baseline
              - kube-system
              - kyverno
      verifyImages:
      - imageReferences:
        - "ghcr.io/Sudip2073/*"
        verifyDigest: true
        required: true
        attestations:
        - predicateType: https://cyclonedx.org/bom
          attestors:
          - count: 1
            entries:
            - keyless:
                subject: "https://github.com/Sudip2073/7005SCN---Individual-Research-Project/.github/workflows/*"
                issuer: "https://token.actions.githubusercontent.com"
                rekor:
                  url: "https://rekor.sigstore.dev"
